@@ -1,3 +1,19 @@
+/*
+ * Copyright 2002-2020 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package org.springframework.aop.aspectj;
 
 import java.lang.annotation.Documented;
@@ -8,7 +24,7 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.Method;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.aop.Advisor;
 import org.springframework.aop.MethodBeforeAdvice;
@@ -16,8 +32,10 @@ import org.springframework.aop.ThrowsAdvice;
 import org.springframework.aop.framework.ProxyFactory;
 import org.springframework.aop.support.DefaultPointcutAdvisor;
 import org.springframework.core.OverridingClassLoader;
+import org.springframework.lang.Nullable;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
 /**
  * @author Dave Syer
@@ -69,13 +87,12 @@ public class TrickyAspectJPointcutExpressionTests {
 		testAdvice(new DefaultPointcutAdvisor(pointcut, logAdvice), logAdvice, new TestServiceImpl(), "TestServiceImpl");
 
 		// Then try again with a different class loader on the target...
-		SimpleThrowawayClassLoader loader = new SimpleThrowawayClassLoader(new TestServiceImpl().getClass().getClassLoader());
+		SimpleThrowawayClassLoader loader = new SimpleThrowawayClassLoader(TestServiceImpl.class.getClassLoader());
 		// Make sure the interface is loaded from the  parent class loader
 		loader.excludeClass(TestService.class.getName());
 		loader.excludeClass(TestException.class.getName());
-		TestService other = (TestService) loader.loadClass(TestServiceImpl.class.getName()).newInstance();
+		TestService other = (TestService) loader.loadClass(TestServiceImpl.class.getName()).getDeclaredConstructor().newInstance();
 		testAdvice(new DefaultPointcutAdvisor(pointcut, logAdvice), logAdvice, other, "TestServiceImpl");
-
 	}
 
 	private void testAdvice(Advisor advisor, LogUserAdvice logAdvice, TestService target, String message)
@@ -93,15 +110,12 @@ public class TrickyAspectJPointcutExpressionTests {
 		factory.addAdvisor(advisor);
 		TestService bean = (TestService) factory.getProxy();
 
-		assertEquals(0, logAdvice.getCountThrows());
-		try {
-			bean.sayHello();
-			fail("Expected exception");
-		} catch (TestException e) {
-			assertEquals(message, e.getMessage());
-		}
-		assertEquals(1, logAdvice.getCountThrows());
+		assertThat(logAdvice.getCountThrows()).isEqualTo(0);
+		assertThatExceptionOfType(TestException.class).isThrownBy(
+				bean::sayHello).withMessageContaining(message);
+		assertThat(logAdvice.getCountThrows()).isEqualTo(1);
 	}
+
 
 	public static class SimpleThrowawayClassLoader extends OverridingClassLoader {
 
@@ -112,8 +126,8 @@ public class TrickyAspectJPointcutExpressionTests {
 		public SimpleThrowawayClassLoader(ClassLoader parent) {
 			super(parent);
 		}
-
 	}
+
 
 	@SuppressWarnings("serial")
 	public static class TestException extends RuntimeException {
@@ -121,8 +135,8 @@ public class TrickyAspectJPointcutExpressionTests {
 		public TestException(String string) {
 			super(string);
 		}
-
 	}
+
 
 	@Target({ ElementType.METHOD, ElementType.TYPE })
 	@Retention(RetentionPolicy.RUNTIME)
@@ -131,17 +145,22 @@ public class TrickyAspectJPointcutExpressionTests {
 	public static @interface Log {
 	}
 
+
 	public static interface TestService {
+
 		public String sayHello();
 	}
 
+
 	@Log
 	public static class TestServiceImpl implements TestService {
+
 		@Override
 		public String sayHello() {
 			throw new TestException("TestServiceImpl");
 		}
 	}
+
 
 	public class LogUserAdvice implements MethodBeforeAdvice, ThrowsAdvice {
 
@@ -150,13 +169,13 @@ public class TrickyAspectJPointcutExpressionTests {
 		private int countThrows = 0;
 
 		@Override
-		public void before(Method method, Object[] objects, Object o) throws Throwable {
+		public void before(Method method, Object[] objects, @Nullable Object o) throws Throwable {
 			countBefore++;
 		}
 
-		public void afterThrowing(Exception e) throws Throwable {
+		public void afterThrowing(Exception ex) throws Throwable {
 			countThrows++;
-			throw e;
+			throw ex;
 		}
 
 		public int getCountBefore() {
@@ -171,7 +190,6 @@ public class TrickyAspectJPointcutExpressionTests {
 			countThrows = 0;
 			countBefore = 0;
 		}
-
 	}
 
 }
